Tweak line breaks.

--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -128,7 +128,7 @@ We submit the following nine recommendations, addressed to the various stakehold
 
 \textbf{Addressed to:} Researchers in natural language processing and information retrieval; curators of large collections of OCR transcripts; scholars using IR and text mining technologies in their research; funders interested in conducting and publishing digital scholarship with OCR'd texts and in building language technologies to work with noisy input.
 
-\textbf{Goals:} Researchers should develop and distribute tools for training and adapting OCR post-correction models; curators of large collections (e.g., Chronicling America or the HathiTrust) should deploy post-correction models in large repositories of OCR transcripts while preserving existing data; researchers should survey and perform quantitative evaluations of the effect of OCR error on commonly used text-analysis methods, as well as qualitative descriptions of the effects of word error rates of, e.g., 2\%, 10\%, and 20\%; researchers should improve methods for error estimation and statistical communication about the distribution of errors and their effects.
+\textbf{Goals:} Researchers should develop and distribute tools for training and adapting OCR post-correction models; curators of large collections such as Chronicling America or the HathiTrust should deploy post-correction models in large repositories of OCR transcripts while preserving existing data; researchers should survey and perform quantitative evaluations of the effect of OCR error on commonly used text-analysis methods, as well as qualitative descriptions of the effects of word error rates of, e.g., 2\%, 10\%, and 20\%; researchers should improve methods for error estimation and statistical communication about the distribution of errors and their effects.
 
 \item \hyperref[sec:rec-layout]{\textbf{Formulate standards for annotation and evaluation of document layout}}
 
@@ -222,9 +222,7 @@ This report synthesizes primary literature and practitioner research conducted b
 
 The first phase of our research was two-pronged, comprising interviews with pre-identified researchers and a broader survey distributed across the study's identified scholarly communities. Drawing on our own understanding of the state of the field in our target communities, we identified a set of individuals (or research groups) and conducted half-hour interviews to better understand their work, their senses of the current state of OCR, as well as the areas they believe to hold the greatest potential for future research. See Appendix~\ref{app:questions} for the list of questions with which we began these interviews, though we often adjusted these prompts as interviews progressed in order to follow individuals' ideas and insights. We will provide access to our notes on these interviews for research purposes upon request.
 
-Second, we created a survey to gather feedback from a wider range of researchers and users invested in our report's questions. The survey questions can be found in Appendix~\ref{app:survey}, but the survey is no longer active. We distributed the survey to a range of academic listservs in humanities fields, digital humanities, library and information sciences, and computer science, and promoted  the survey on social media. Sixty-two people responded to the survey, and their answers proved valuable both in expanding our ideas about the major issues at stake in OCR research and for pointing us to research of which we were unaware. We followed up and conducted formal interviews with several survey participants whose answers we found particularly enlightening. A spreadsheet of the anonymized survey responses can be found at
-
-\url{https://docs.google.com/spreadsheets/d/1_qj-wxXYV0ybVfmR-SS3QzsLplPXGn3XM2pmPSbwbIM/edit?usp=sharing}
+Second, we created a survey to gather feedback from a wider range of researchers and users invested in our report's questions. The survey questions can be found in Appendix~\ref{app:survey}, but the survey is no longer active. We distributed the survey to a range of academic listservs in humanities fields, digital humanities, library and information sciences, and computer science, and promoted  the survey on social media. Sixty-two people responded to the survey, and their answers proved valuable both in expanding our ideas about the major issues at stake in OCR research and for pointing us to research of which we were unaware. We followed up and conducted formal interviews with several survey participants whose answers we found particularly enlightening.  The anonymized survey responses can be found in a Google spreadsheet.\footnote{\url{https://docs.google.com/spreadsheets/d/1_qj-wxXYV0ybVfmR-SS3QzsLplPXGn3XM2pmPSbwbIM}}
 
 Following the initial interviews and survey, we grouped interviewees into five working groups, organized (roughly) around the most prominent shared concerns raised during our initial interviews. The primary challenges facing researchers were clearly articulated during our initial interviews, and so these groups were charged with looking toward the future. Each group began their conversation considering the question: ``given adequate time, attention, and funding, what innovation(s) in OCR would most significantly move research forward in your discipline?''  The point of these working groups was to move beyond listing challenges for historical and multilingual OCR and begin outlining potential solutions. These conversations were lively and did not always produce consensus, but they did help us begin honing our ideas about the most impactful directions for immediate-, medium-, and long-term OCR research.
 
@@ -242,7 +240,7 @@ The following nine broad recommendations arose from our interviews and discussio
 
 \paragraph{Addressed to:} Researchers in natural language processing and information retrieval; curators of large collections of OCR transcripts; scholars using IR and text mining technologies in their research; funders interested in conducting and publishing digital scholarship with OCR'd texts and in building language technologies to work with noisy input.
 
-\paragraph{Recommendations:} Researchers should develop and distribute tools for training and adapting OCR post-correction models; curators of large collections (e.g., Chronicling America or the HathiTrust) should deploy post-correction models in large repositories of OCR transcripts while preserving existing data; researchers should survey and perform quantitative evaluations of the effect of OCR error on commonly used text-analysis methods, as well as qualitative descriptions of the effects of word error rates of, e.g., 2\%, 10\%, and 20\%; researchers should improve methods for error estimation and statistical communication about the distribution of errors and their effects.
+\paragraph{Recommendations:} Researchers should develop and distribute tools for training and adapting OCR post-correction models; curators of large collections such as Chronicling America or the HathiTrust should deploy post-correction models in large repositories of OCR transcripts while preserving existing data; researchers should survey and perform quantitative evaluations of the effect of OCR error on commonly used text-analysis methods, as well as qualitative descriptions of the effects of word error rates of, e.g., 2\%, 10\%, and 20\%; researchers should improve methods for error estimation and statistical communication about the distribution of errors and their effects.
 
 \paragraph{Recommendation narrative:}
 
@@ -259,7 +257,7 @@ Before we discuss methods for improving OCR at the level of individual documents
 
 One common reaction of scholars and readers when confronted with OCR output is \emph{to decide that it is too noisy to use}. Many scholars we surveyed said that they avoided using OCR'd corpora due to the large number of errors. Some scholars described selecting among corpora on the basis of their error rates. We suspect, though more ethnography and analysis might make the analysis more sophisticated, that this reaction is an overgeneralization from the task of reading an OCR transcript as they would any other digitized text. In other words, the slowdown in reading induced by frequent errors causes readers to infer that other tasks may be similarly impaired. Similarly, a scholar attempting to produce a clean text by correcting OCR output may find that completely retyping it is faster and, again, conclude that the OCR transcript is useless for other tasks, as well. Further surveys might investigate whether these reactions are less common to users of image-front interfaces. It is also suggestive that one of the most widespread---and, as we quoted from Underwood above, ``undertheorized''---uses of OCR is for search, where users are least likely to read the transcript as a connected text.
 
-One natural response to OCR errors is to attempt to correct them. Even if we ignore, or do not have access to, the image from which the OCR was produced, we might still apply statistical models trained on clean text and a likely error distribution to infer a better transcript. This approach of taking a given OCR transcript and inferring the correct reading is usually known as \textbf{OCR post-correction}.\footnote{\cite{tong96:_statis_approac_autom_ocr_error_correc_contex} provide an early and straightforward example of a ``noisy channel'' approach to OCR post-correction. Later approaches have generalized such models to more complicated cascades of finite-state transducers \citep{kolak2003generative,xu17:_retriev_combin_repeat_passag_improv_ocr}, or used computational models of morphologically rich languages for spell checking \citep{boschetti09:_improv_ocr_accur_class_critic_edition}, or used supervised training of log-linear models \citep{lund2011progressive}, or applied data augmentation and encoder-decoder models to build unsupervised models using only clean text for training \citep{dong18:acl}.}  For supervised training, and for model selection and refinement of unsupervised models, in-domain training data is usually necessary to achieve reasonable performance. Selecting good post-correction models may be almost as difficult as selecting the right OCR model for a given text. More work on model \emph{adaptation} (see Recommendation~\ref{rec:adaptation} below) is thus likely to be as helpful for improved post-correction, as more effective architectures for supervised learning of transducers. Improved training and adaptation for statistical language models should also be beneficial, in particular for documents with a mixture of languages (Recommendation~\ref{rec:diverse}). Finally, performing inference at the scale of collections instead of individual documents will allow these methods to exploit structures from fully duplicated documents to specialized domain vocabularies.
+One natural response to OCR errors is to attempt to correct them. Even if we ignore, or do not have access to, the image from which the OCR was produced, we might still apply statistical models trained on clean text and a likely error distribution to infer a better transcript. This approach of taking a given OCR transcript and inferring the correct reading is usually known as \textbf{OCR post-correction}.\footnote{\cite{tong96:_statis_approac_autom_ocr_error_correc_contex} provide an early and straightforward example of a ``noisy channel'' approach to OCR post-correction. Later approaches have generalized such models to more complicated cascades of finite-state transducers \citep{kolak2003generative,xu17:_retriev_combin_repeat_passag_improv_ocr}, or used computational models of morphologically rich languages for spell checking \citep{boschetti09:_improv_ocr_accur_class_critic_edition}, or used supervised training of log-linear models \citep{lund2011progressive}, or applied data augmentation and encoder-decoder models to build unsupervised models using only clean text for training \citep{dong18:acl}.}  For supervised training, and for model selection and refinement of unsupervised models, in-domain training data is usually necessary to achieve reasonable performance. Selecting good post-correction models may be almost as difficult as selecting the right OCR model for a given text. More work on model \emph{adaptation} (see Recommendation~\ref{rec:adaptation}) is thus likely to be as helpful for improved post-correction, as more effective architectures for supervised learning of transducers. Improved training and adaptation for statistical language models should also be beneficial, in particular for documents with a mixture of languages (Recommendation~\ref{rec:diverse}). Finally, performing inference at the scale of collections instead of individual documents will allow these methods to exploit structures from fully duplicated documents to specialized domain vocabularies.
 
 Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
 
@@ -292,9 +290,9 @@ Many of our interviewees suggested that communication about OCR errors should be
 
 Layout analysis was perhaps the most widely-mentioned barrier to progress in historical OCR among those we interviewed. Researchers working on historical Arabic and Chinese scripts mentioned the unusual layout of their print and manuscript sources. Even researchers working on unsupervised OCR and computational bibliography---such as Taylor Berg-Kirkpatrick and his colleagues on the Ocular project---mentioned using simple existing rule-based methods for layout analysis before training character models. Bruce Robertson and others working on critical editions of ancient Greek mentioned the problems of dividing the page into text, headers, marginal references, and notes. Deborah Thomas at the Library of Congress and others working on newspaper digitization mentioned both the need for improved page analysis and the need to preserve existing manual page segmentation as materials are re-OCR'd. Ashok Popat and Jonathan Baccash at Google said that their focus was on ``text detection'', i.e., finding regions of the page with text to be transcribed by image models, and that richer layout analysis remained a project for the future.
 
-This almost universal mention of layout analysis among those we surveyed does not mean that no research is being done on the problem in general or for historical sources in particular. The International Conference on Document Analysis and Recognition (ICDAR) has hosted several competitions on layout analysis for historical books and manuscripts.\footnote{For ICDAR competitions in 2017, see \url{http://u-pat.org/ICDAR2017/program_competitions.php}}  These competitions typically evaluate classification at the pixel level, which may or may not correlate well with transcription accuracy or other metrics of interest to scholars. Layout analysis evaluations also often ignore reading order and other useful structural metadata and focus on a small number of classes, such as ``body'', ``decoration'', ``comment'', and ``background'' for manuscripts. Similarly, the many book encoding and manuscript transcription projects may or may not capture enough data of the right kind to aid progress in building computational models of page layout. Certainly, book design over 500 years of printing with moveable type, extending into older print and manuscript traditions, means that layout presents a diversity of problems surpassed only by those posed by the diversity of historical scripts and languages.
+This almost universal mention of layout analysis among those we surveyed does not mean that no research is being done on the problem in general or for historical sources in particular. The International Conference on Document Analysis and Recognition (ICDAR) has hosted several competitions on layout analysis for historical books and manuscripts.\footnote{For ICDAR competitions in 2017, see \url{http://u-pat.org/ICDAR2017/program_competitions.php}}  These competitions typically evaluate classification at the pixel level, which may or may not correlate well with transcription accuracy or other metrics of interest to scholars. Layout analysis evaluations also often ignore reading order and other useful structural metadata and focus on a small number of classes, such as ``body'', ``decoration'', ``comment'', and ``background'' for manuscripts. Similarly, the many book encoding and manuscript transcription projects may or may not capture enough data of the right kind to aid progress in building computational models of page layout. Certainly, the great variability in book design over 500 years of printing with moveable type, extending into older print and manuscript traditions, means that layout presents a diversity of problems surpassed only by those posed by the diversity of historical scripts and languages.
 
-Applying machine learning methods from computer vision to page layout analysis is a promising, current research topic \citep[e.g.,][]{meier17:_fully_convol_neural_networ_newsp_artic_segmen,xu17:_page_segmen_histor_handw_docum,oliveira18}. Many widely-used production systems, however, have computational constraints. Due to the complex dependencies and expensive computational requirements for training and inference with computer vision models, even many state-of-the-art research systems for OCR rely on rule-based layout analysis front ends. \cite{breuel17:_robus_simpl_page_segmen_hybrid} provides a good overview of using state-of-the-art object recognition approaches, combining convolutional and recurrent neural networks, to the task of page analysis. Particularly useful is Breuel's focus on the much larger dimensionality of most page images compared to most computer-vision benchmarks and the benefits of treating layout analysis as an image-to-image transduction task. One could imagine, moreover, an end-to-end image-to-text-transcription system that does not pipeline together a layout analysis with a character transcription system (although requiring line breaks or other markup in the transcript would tell us \emph{something} about the layout). One example of an output from layout analysis not included in the ``text detection'' paradigm is structural metadata extraction, such as detecting chapter and article breaks. This sort of metadata is especially helpful for building navigation features for screen readers---the use case for much early OCR work in the 1970s by Kurzweil and others.
+Applying machine learning methods from computer vision to page layout analysis is a promising, current research topic \citep[e.g.,][]{meier17:_fully_convol_neural_networ_newsp_artic_segmen,xu17:_page_segmen_histor_handw_docum,oliveira18}. Many widely-used production systems, however, have computational constraints. Due to the complex dependencies and expensive computational requirements for training and inference with computer vision models, even many state-of-the-art research systems for OCR rely on rule-based layout analysis with some manual intervention \citep{reul17:_larex}. \cite{breuel17:_robus_simpl_page_segmen_hybrid} provides a good overview of using state-of-the-art object recognition approaches, combining convolutional and recurrent neural networks, to the task of page analysis. Particularly useful is Breuel's focus on the much larger dimensionality of most page images compared to most computer-vision benchmarks and the benefits of treating layout analysis as an image-to-image transduction task. One could imagine, moreover, an end-to-end image-to-text-transcription system that does not pipeline together a layout analysis with a character transcription system (although requiring line breaks or other markup in the transcript would tell us \emph{something} about the layout). One example of an output from layout analysis not included in the ``text detection'' paradigm is structural metadata extraction, such as detecting chapter and article breaks. This sort of metadata is especially helpful for building navigation features for screen readers---the use case for much early OCR work in the 1970s by Kurzweil and others.
 
 What is needed, we propose, are first of all experiments and discussions among humanists, computer vision and OCR researchers, and experts in cultural heritage institutions centered on questions such as:
 \begin{itemize}
