First draft of acknowledgements.

--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -53,7 +53,7 @@
   \label{sec:app-#1}}
 
 \renewcommand{\bibname}{References}
-\usepackage[numbib]{tocbibind}
+\usepackage[nottoc,numbib]{tocbibind}
 
 \setcounter{secnumdepth}{-1}
 
@@ -88,6 +88,16 @@
 \noindent The background image on the title page of Venetus A (Marciana 822 = Graecus Z. 454) is derived from an original that is \copyright\ 2007, Biblioteca Nazionale Marciana, Venezia, Italia. The derivative image is \copyright\ 2010, Center for Hellenic Studies. The original and derivative images are licensed under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 License. The CHS/Marciana Imaging Project was directed by David Jacobs of the British Library.  The image of page segmentation is from Marmik Pandya.  The image of Arabic ligatures is from \cite{kiessling17:_impor_new_devel_arabog_optic}.  The image of the OCR correction interface is from the Lace project (\url{heml.mta.ca}) at Mount Allison University, directed by Bruce Robertson.
 
 \tableofcontents
+
+\chapter{Acknowledgements}
+
+David A. Smith and Ryan Cordell are the authors of this report and are solely responsible for its contents.  They are deeply grateful, nevertheless, for all of the help and encouragement they have received in researching and writing it.
+
+Throughout the interview process and the workshop, we were greatly assisted by Bill Quinn, a Ph.D. student in English at Northeastern. Bill helped with corresponding with and scheduling the interviewees, with taking notes during the interviews and group discussions, and with managing travel and logistics for the workshop at Northeastern. Without Bill's help, we would not have been able to reach out to such a diverse group of experts. Rui Dong, a Ph.D. student in Computer Science at Northeastern, helped with performing pilot experiments on automatically creating evaluation corpora by alignment and on unsupervised post-correction.
+
+This report was written with the generous support of the Andrew W. Mellon Foundation and its Scholarly Communications program.  Don Waters and Patricia Hswe have been tremendously helpful and encouraging throughout this process.
+
+Finally, we would like to thank Brett Bobley at the National Endowment for the Humanities for first asking our opinion on writing a report on historical and multilingual OCR---and for responding positively when we said, ``Why not us!'' Brett and Elizabeth Tran at the NEH provided  valuable suggestions and encouragement.
 
 \chapter{Summary}
 \label{sec:summary}
@@ -227,8 +237,6 @@ Second, we created a survey to gather feedback from a wider range of researchers
 Following the initial interviews and survey, we grouped interviewees into five working groups, organized (roughly) around the most prominent shared concerns raised during our initial interviews. The primary challenges facing researchers were clearly articulated during our initial interviews, and so these groups were charged with looking toward the future. Each group began their conversation considering the question: ``given adequate time, attention, and funding, what innovation(s) in OCR would most significantly move research forward in your discipline?''  The point of these working groups was to move beyond listing challenges for historical and multilingual OCR and begin outlining potential solutions. These conversations were lively and did not always produce consensus, but they did help us begin honing our ideas about the most impactful directions for immediate-, medium-, and long-term OCR research.
 
 At the conclusion of the interviews, survey, and working group conversations and prior to the workshop at Northeastern, we prepared an executive summary of the interview and survey process, which can be found in Appendix~\ref{app:exec-summary}. This summary was created in preparation for the project's next phase, an in-person workshop including a subset of our interviewees, who were chosen to represent the various communities this report seeks to bring together. A full list of workshop participants can be found in Appendix~\ref{app:participants}.  The workshop was held at Northeastern University on February 7--8, 2018. The workshop aimed to clarify the many issues raised in the interviews and survey, identify the most promising proposals for future research, and move toward a consensus regarding the recommendations this report will make for future funding and support of OCR research. The recommendations below emerge directly from the workshop.
-
-Throughout the interview process and the workshop, we were greatly assisted by Bill Quinn, a Ph.D. student in English at Northeastern. Bill helped with corresponding with and scheduling the interviewees, with taking notes during the interviews and group discussions, and with managing travel and logistics for the workshop at Northeastern. Without Bill's help, we would not have been able to reach out to such a diverse group of experts. Rui Dong, a Ph.D. student in Computer Science at Northeastern, helped with performing pilot experiments on automatically creating evaluation corpora by alignment and on unsupervised post-correction.
 
 \newpage
 
