--- a/ocr.bib
+++ b/ocr.bib
@@ -480,3 +480,12 @@
   note =	 {NSF IIS \#1816311}
 }
 
+@PhdThesis{joulain-jay17:_corpus_linguis_histor,
+  author =	 {Amelia T. Joulain-Jay},
+  title =	 {Corpus Linguistics for History: The Methodology of
+                  Investigating Place-name Discourses in Digitised
+                  Nineteenth-century Newspapers},
+  school =	 {Lancaster University},
+  year =	 2017
+}
+
