Second release: Add extra discussion of European projects.

--- a/ocr.bib
+++ b/ocr.bib
@@ -489,3 +489,55 @@
   year =	 2017
 }
 
+@Book{piotrowski12:nlpht,
+  author =	 {Michael Piotrowski},
+  title =	 {Natural Language Processing for Historical Texts},
+  publisher =	 {Morgan \& Claypool},
+  year =	 2012
+}
+
+@InProceedings{gotscharek09:_lexic_resour_digit_histor_docum,
+  author =	 {Annette Gotscharek and Ulrich Reffle and Christoph
+                  Ringlstetter and Klaus U. Schulz},
+  title =	 {On Lexical Resources for Digitization of Historical
+                  Documents},
+  booktitle =	 {Proceedings of the ACM Symposium on Document
+                  Engineering (DocEng)},
+  year =	 2009,
+  pages =	 {193-200}
+}
+
+@Article{tanner09:_measur_mass_text_digit_qualit_useful,
+  author =	 {Simon Tanner and Trevor Muñoz and Pich Hemy Ros},
+  title =	 {Measuring Mass Text Digitization Quality and
+                  Usefulness: Lessons Learned from Assessing the {OCR}
+                  Accuracy of the {British Library's} 19th Century
+                  Online Newspaper Archive},
+  journal =	 {D-Lib Magazine},
+  year =	 2009,
+  url =		 {http://www.dlib.org/dlib/july09/munoz/07munoz.html},
+  volume =	 15,
+  number =	 {7/8}
+}
+
+@Article{jarlbrink17:_cultur_herit_digit_noise,
+  author =	 {Johan Jarlbrink and Pelle Snickars},
+  title =	 {Cultural Heritage as Digital Noise: Nineteenth
+                  Century Newspapers in the Digital Archive},
+  journal =	 {Journal of Documentation},
+  year =	 2017,
+  volume =	 73,
+  number =	 6,
+  pages =	 {1228-1243},
+  url =		 {https://doi.org/10.1108/JD-09-2016-0106}
+}
+
+@Article{hill18:_quant_impac_dirty_ocr_histor_text_analy,
+  author =	 {Mark John Hill and Simon Hengchen},
+  title =	 {Quantifying the Impact of Dirty {Ocr} on Historical
+                  Text Analysis: {Eighteenth Century Collections
+                  Online} as a Case Study},
+  journal =	 {Digital Scholarship in the Humanities},
+  year =	 2018
+}
+
