--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -95,6 +95,8 @@ David A. Smith and Ryan Cordell are the authors of this report and are solely re
 
 Throughout the interview process and the workshop, we were greatly assisted by Bill Quinn, a Ph.D. student in English at Northeastern. Bill helped with corresponding with and scheduling the interviewees, with taking notes during the interviews and group discussions, and with managing travel and logistics for the workshop at Northeastern. Without Bill's help, we would not have been able to reach out to such a diverse group of experts. Rui Dong, a Ph.D. student in Computer Science at Northeastern, helped with performing pilot experiments on automatically creating evaluation corpora by alignment and on unsupervised post-correction.
 
+We are grateful to all the scholars who gave their time to interviews and the workshop at Northeastern (see Appendix~\ref{sec:attendees}).  We hope that many of their insights are well reflected here.  We would also like to thank Simon Tanner, Simon Hengchen, Michelle Moravec, and Michael Piotrowski for their comments on earlier versions.
+
 This report was written with the generous support of the Andrew W. Mellon Foundation and its Scholarly Communications program.  Don Waters and Patricia Hswe have been tremendously helpful and encouraging throughout this process.
 
 Finally, we would like to thank Brett Bobley at the National Endowment for the Humanities for first asking our opinion on writing a report on historical and multilingual OCR---and for responding positively when we said, ``Why not us!'' Brett and Elizabeth Tran at the NEH provided  valuable suggestions and encouragement.
@@ -200,7 +202,7 @@ Creating copies and editions of texts has held a central place in the humanities
 
 The influence of OCR pervades contemporary humanities research and teaching. Most scholars pay OCR little mind---if they are even aware of it---because corpus analysis seems the province of a small subset of researchers. As Ted Underwood \citeyearpar[p.~64]{Underwood:2014ep} reminds us, however, ``[a]lgorithmic mining of large electronic databases has been quietly central to the humanities for two decades. We call this practice `search,' but `search' is a deceptively modest name for a complex technology that has come to play an evidentiary role in scholarship.'' Researchers and students increasingly rely on databases of digitized historical materials in conducting research, for reasons of geographic or economic access, but also for reasons of preservation, as libraries increasingly restrict physical access to fragile materials after digitization. As a result, researchers and students alike rely on search in OCR collections, often unwittingly. The predominant public interfaces of large-scale archives focus on page images, seeking to present the digitized object as a facsimile of its original, while scholars often cite historical materials directly, even when they were accessed through a digitized edition. Taken together, these practices make it easy to forget that we are all engaged in relatively sophisticated modes of machine reading each time we use a digital archive. Scholars sometimes invoke the OCR of these collections in warnings, as when Andrew Stauffer \citeyearpar{stauffer12:_ninet_centur_archiv_digit_age} cautions, ``Algorithmic searching and text mining'' rely ``almost exclusively on the verbal content of idealized models of nineteenth-century printed materials, models that are themselves vitiated by numerous localized errors in character recognition.''
 
-Such critiques have spurred notable attempts to correct errorful OCR in large scale digitization projects. Bonnie Mak \citeyearpar{mak14:_archaeol_digit} notes that since 1999 the Text Creation Partnership (TCP) has mobilized ``legions of outsourced `vendors' who have keyboarded and tagged over 40,000 early English texts'' in EEBO, as well as another 8,000 for Gale Cengage's Eighteenth-Century Collections Online (ECCO) and Readex's Evans Early American Imprints (Evans-TCP). The Australian Newspaper Digitization Program, the results of which are available through the National Library of Australia's Trove portal, invested significant money in ``manually correcting the titles, subtitles, and first four lines of article text'' over 21 million newspaper pages (as of July 2016), mostly through low-cost, offshore editing services \citep{bode16:_thous_titles_author}. In addition, Trove's interface allows users to manually correct the archive's text data, so that by July 2013, ``more than 100 million lines of text'' had been corrected through ``crowd-sourced effort'' \citep{ayres13:_singin_supper}.  Even so, the majority of Trove's OCR'd text remains uncorrected, as 100 million hand-corrected lines constitute only a small percentage of the total lines across 21 million newspaper pages. Most historical book and newspaper archives have deemed correction of articles too time consuming and costly; therefore, the bulk of keyword search within large scale archives, whether open-access or commercially licensed, depends on the errorful output of OCR.
+Such critiques have spurred notable attempts to correct errorful OCR in large scale digitization projects. Bonnie Mak \citeyearpar{mak14:_archaeol_digit} notes that since 1999 the Text Creation Partnership (TCP) has mobilized ``legions of outsourced `vendors' who have keyboarded and tagged over 40,000 early English texts'' in EEBO, as well as another 8,000 for Gale Cengage's Eighteenth-Century Collections Online (ECCO) and Readex's Evans Early American Imprints (Evans-TCP).  The Australian Newspaper Digitization Program, the results of which are available through the National Library of Australia's Trove portal, invested significant money in ``manually correcting the titles, subtitles, and first four lines of article text'' over 21 million newspaper pages (as of July 2016), mostly through low-cost, offshore editing services \citep{bode16:_thous_titles_author}. In addition, Trove's interface allows users to manually correct the archive's text data, so that by July 2013, ``more than 100 million lines of text'' had been corrected through ``crowd-sourced effort'' \citep{ayres13:_singin_supper}.  Even so, the majority of Trove's OCR'd text remains uncorrected, as 100 million hand-corrected lines constitute only a small percentage of the total lines across 21 million newspaper pages. Most historical book and newspaper archives have deemed manual correction of texts too time consuming and costly; therefore, the bulk of keyword search within large scale archives, whether open-access or commercially licensed, depends on the errorful output of OCR.
 
 In large part due to these OCR issues, much computational research in the humanities has restricted itself to small, ``cleaner'' corpora such as Project Gutenberg, EEBO-TCP, the Wright American Fiction collection, the Chadwick-Healey British novels collection, or corpora custom-built for particular studies. The University of Richmond's groundbreaking ``Mining the Dispatch'' project (\url{http://dsl.richmond.edu/dispatch/}), for instance, bases its topic models not on the Chronicling America digitization of the Richmond \emph{Daily Dispatch}, but instead on a hand-transcribed subset of the Daily Dispatch. While that project revealed new insights about this important Civil War era newspaper, its methods could not be easily expanded across the much larger Chronicling America collection or its findings compared against the many other newspapers with only OCR transcriptions.
 
@@ -213,6 +215,8 @@ We believe similarly experimental approaches to the errorful OCR archive could b
 Most OCR research and systems, meanwhile, have developed without reference to applications in the humanities and have focused on modern, Latin-script documents. While we will not survey the entire field here, we will note some exceptions to this trend and some current developments that show promise for fruitful collaboration between OCR and humanities researchers.
 
 While large-scale scanning projects have generally used off-the-shelf OCR products, several researchers on a smaller scale have found that domain-specific training and modeling provide significant gains in accuracy. The availability of open-source systems can give  scholars of particular languages the ability, though not always the computing and human resources, to build better systems. Bruce Robertson and colleagues have achieved significant improvements in OCR'ing ancient Greek using publisher-specific training sets and system combination.\footnote{\url{http://heml.mta.ca/lace/}}  \cite{springmann17:_ocr_histor_print_applic_build_diach_corpor} found that, for historical German herbal manuals printed between 1487 and 1870, training on diplomatic transcriptions with matched typefaces achieved over 99\% character accuracy. More encouragingly, even training on different historical typefaces could achieve character accuracies above 90\%. That work showed what could be done by retraining existing models. Dan Garrette and colleagues \citeyearpar{garrette15:_unsup_code_switc_multil_histor_docum_trans} built an unsupervised model to infer image and language models for historical texts mixing several languages.
+
+At a larger scale, the European IMPACT project (2008--11), noting that ``[OCR] does in many cases not produce satisfying results for historical documents'', aimed to advance the state of the art for historical books, particularly in the blackletter type common in many languages before the twentieth century.\footnote{See \url{http://www.impact-project.eu/about-the-project/concept/} and comments by \citet[\S{}4.3.2]{piotrowski12:nlpht}.}  In addition to building institutional infrastructure in a Centre of Competence and partner institutions, the most widely adopted outcome was support for Fraktur typefaces in ABBYY FineReader.  Other work on image enhancement and layout also saw adoption.  Later European projects such as READ and OCR-D are carrying on these effort to improve historical handwritten and printed documents using current systems, such as Transkribus and Tesseract, that transcribe lines instead of segmented words or characters.\footnote{\url{https://read.transkribus.eu/} and \url{http://ocr-d.de/}}  Open-source systems are becoming more widely used for different stages of the process---from image preprocessing to layout analysis to transcription and post-correction.
 
 Beyond these humanities-specific applications, the overall landscape of OCR research has shifted significantly in the last decade. OCR systems in the past often involved a pipeline of page layout analysis that involved splitting lines, words, and even characters into separate image patches, which would then be classified. With those pipelines, connected scripts such as Arabic or even historically common ligatures in Latin script would present fundamentally different problems from recognizing cleanly separable characters. More recently, most state-of-the-art OCR systems have adopted neural network models with recurrent and convolutional architectures to transcribe entire lines of text at once.\footnote{Many systems now use these architectures, including, as of October 2018, the widely-used Tesseract system (\url{https://github.com/tesseract-ocr/tesseract}).  For applications to historical and multilingual scripts in particular, see, e.g., \cite{breuel13:_high_ocr_print_englis_frakt_lstm_networ} and \cite{kiessling17:_impor_new_devel_arabog_optic}.}  These systems, therefore, exhibit much less of a gap between separated and connected scripts---or indeed, between print and manuscript. We expect, therefore, that the problems of historical and multilingual OCR will find a receptive audience in the OCR research community.
 
@@ -267,9 +271,9 @@ One common reaction of scholars and readers when confronted with OCR output is \
 
 One natural response to OCR errors is to attempt to correct them. Even if we ignore, or do not have access to, the image from which the OCR was produced, we might still apply statistical models trained on clean text and a likely error distribution to infer a better transcript. This approach of taking a given OCR transcript and inferring the correct reading is usually known as \textbf{OCR post-correction}.\footnote{\cite{tong96:_statis_approac_autom_ocr_error_correc_contex} provide an early and straightforward example of a ``noisy channel'' approach to OCR post-correction. Later approaches have generalized such models to more complicated cascades of finite-state transducers \citep{kolak2003generative,xu17:_retriev_combin_repeat_passag_improv_ocr}, or used computational models of morphologically rich languages for spell checking \citep{boschetti09:_improv_ocr_accur_class_critic_edition}, or used supervised training of log-linear models \citep{lund2011progressive}, or applied data augmentation and encoder-decoder models to build unsupervised models using only clean text for training \citep{dong18:acl}.}  For supervised training, and for model selection and refinement of unsupervised models, in-domain training data is usually necessary to achieve reasonable performance. Selecting good post-correction models may be almost as difficult as selecting the right OCR model for a given text. More work on model \emph{adaptation} (see Recommendation~\ref{rec:adaptation}) is thus likely to be as helpful for improved post-correction, as more effective architectures for supervised learning of transducers. Improved training and adaptation for statistical language models should also be beneficial, in particular for documents with a mixture of languages (Recommendation~\ref{rec:diverse}). Finally, performing inference at the scale of collections instead of individual documents will allow these methods to exploit structures from fully duplicated documents to specialized domain vocabularies.
 
-Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
+Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search, and we may wish to develop metrics to evaluate those tasks \citep{tanner09:_measur_mass_text_digit_qualit_useful}. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
 
-Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. \cite{nelson17:_comput_groun_theor} conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences \citep{schofield16:_compar_apple}.}  \cite{joulain-jay17:_corpus_linguis_histor}, investigating mass-digitized nineteenth-century newspapers, finds that OCR errors can make many commonly used word collocation statistics such as mutual information and Dunning's log-likelihood unreliable but that some post-correction techniques can recover much of the ranking information for these statistics.  She further finds that methods for analyzing place-name mentions based on these collocations can be improved.  \cite{franzini18:_attrib_author_noisy_digit_corres} showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry. In both cases, results on clean and automatically transcribed data were comparable.  \cite{darwish02:_term_selec_searc_print_arabic} showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
+Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. \cite{nelson17:_comput_groun_theor} conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences \citep{schofield16:_compar_apple}.}  \cite{joulain-jay17:_corpus_linguis_histor}, investigating mass-digitized nineteenth-century newspapers, finds that OCR errors can make many commonly used word collocation statistics such as mutual information and Dunning's log-likelihood unreliable but that some post-correction techniques can recover much of the ranking information for these statistics.  She further finds that methods for analyzing place-name mentions based on these collocations can be improved.  \cite{franzini18:_attrib_author_noisy_digit_corres} showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry.  In both cases, results on clean and automatically transcribed data were comparable.  \cite{darwish02:_term_selec_searc_print_arabic} showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
 
 These measurements of the effect of OCR errors on downstream tasks are useful. To be usefully applied by scholars and readers such as those we surveyed, however, we need both (1) effective methods for unsupervised error estimation that go beyond OCR systems' own confidence estimation and (2) effective approaches to communicating and visualizing the effect of errors on the task at hand.
 
@@ -394,7 +398,7 @@ Especially with the greater availability of open-source OCR software, scholars i
 
 Some OCR projects are large and diverse enough, however, that it is difficult to know ahead of time what training data would be required. On the other hand, it is possible that sufficiently close training data might be already available. We therefore propose that research on automatically adapting models trained on existing data to documents in a new collection and, specifically, on searching existing collections for similar training data would provide substantial benefit to historical and multilingual OCR. Such research on model selection and adaptation would require the compilation of existing training sets (see Recommendation~\ref{rec:editions}) and would be facilitated by the collection and deployment of trained models in an OCR ``service bureau'' (see Recommendation~\ref{rec:bureau}).
 
-The OpenITI project's work on Kraken \citep{kiessling17:_impor_new_devel_arabog_optic} found that for Arabic OCR, transcribing on the order of 1000 lines in the appropriate font could improve accuracy beyond models trained on other fonts.  The eMOP project, led by Laura Mandel at Texas A\&M, also worked on publisher- and font-specific models for early modern books in Latin scripts. The Lace OCR project for ancient Greek, headed by Bruce Robertson, found that training models for each of the major publishers for Greek texts (Oxford, Teubner, Budé, etc.) was particularly useful. In fact, Lace runs every model on each book and selects the results after the fact by computing unsupervised evaluation metrics. This procedure might be too computationally intensive for some mass digitization projects or when there are significantly more models, but the results are suggestive. The Ocular OCR system \citep{berg-kirkpatrick13:_unsup_trans_histor_docum,garrette15:_unsup_code_switc_multil_histor_docum_trans}, by performing unsupervised learning on individual books, takes this process even farther, although building hierarchical models that could pool evidence from multiple books might be beneficial.
+The OpenITI project's work on Kraken \citep{kiessling17:_impor_new_devel_arabog_optic} found that for Arabic OCR, transcribing on the order of 1000 lines in the appropriate font could improve accuracy beyond models trained on other fonts.  The eMOP project, led by Laura Mandel at Texas A\&M, also worked on publisher- and font-specific models for early modern books in Latin scripts.  In work complementary to this, the IMPACT project distilled historical corpora into lexical resources to adapt OCR systems \citep[\S{}4.3.2]{piotrowski12:nlpht}.  \cite{gotscharek09:_lexic_resour_digit_histor_docum} found that in some cases the small historical lexica performed as well as much larger modern resources, leaving open the possibility that different adaptation techniques might take better advantage of both.  The German OCR-D project aims to continue this work with model training and selection with current OCR systems that operate on whole lines.  The Lace OCR project for ancient Greek, headed by Bruce Robertson, found that training models for each of the major publishers for Greek texts (Oxford, Teubner, Budé, etc.) was particularly useful. In fact, Lace runs every model on each book and selects the results after the fact by computing unsupervised evaluation metrics. This procedure might be too computationally intensive for some mass digitization projects or when there are significantly more models, but the results are suggestive.  The Ocular OCR system \citep{berg-kirkpatrick13:_unsup_trans_histor_docum,garrette15:_unsup_code_switc_multil_histor_docum_trans}, by performing unsupervised learning on individual books, takes this process even farther, although building hierarchical models that could pool evidence from multiple books might be beneficial.
 
 The fundamental problem, therefore, when training an OCR model for a particular book or manuscript is efficiently incorporating training data from other projects. Matching on known metadata attributes, such as publisher, is subject to noise and may ignore relevant sources of information. In newspaper publishing, for example, we have records of the same sets of physical type being sold to other publishers. The relevant question for OCR systems, however, is not how similar two typefaces or hands are to the human eye, or in their lineage, but how useful data and models from one collection are in transcribing another.
 
@@ -564,6 +568,7 @@ While philologists and computational linguists have been developing computationa
 Many humanities OCR projects use off-the-shelf that fit their data more or less well; others train new models on their own annotated training data. Many projects, particularly in libraries, operate at a scale, and with such a diversity of data, that makes direct retraining less satisfactory. We see an opportunity for developing corpus-scale quality control and model adaptation approaches, as exemplified by the German OCR-D project, Google's massively multilingual OCR pipeline, and the deployment of OCR pipelines at the Library of Congress and Internet Archive. In particular, we can hope to take advantage of the scale of the collections already digitized to build better transcription and correction models.
 
 \appendix{participants}{OCR Workshop Attendees}
+\label{sec:attendees}
 
 \begin{itemize}
   
