Another scanning citation.

--- a/ocr.bib
+++ b/ocr.bib
@@ -520,6 +520,18 @@
   number =	 {7/8}
 }
 
+@InCollection{tanner16:_choic_digit_digit_human,
+  author =	 {Simon Tanner and Laura Gibson and Rebecca Kahn and
+                  Geoff Laycock},
+  title =	 {Choices in Digitisation for the Digital Humanities},
+  booktitle =	 {Research Methods for Creating and Curating Data in
+                  the Digital Humanities},
+  publisher =	 {Edinburgh University Press},
+  year =	 2016,
+  editor =	 {Matt Hayler and Gabriele Griffin},
+  pages =	 {14-43}
+}
+
 @Article{jarlbrink17:_cultur_herit_digit_noise,
   author =	 {Johan Jarlbrink and Pelle Snickars},
   title =	 {Cultural Heritage as Digital Noise: Nineteenth
@@ -540,4 +552,3 @@
   journal =	 {Digital Scholarship in the Humanities},
   year =	 2018
 }
-
